# Kurata05-2D-tissue-model

./: README.md
16EAD_clusters_configuration/: Makefile.am
16EAD_clusters_configuration/check/: in
16EAD_clusters_configuration/src/: system.c  vars_para.c
1EAD_clusters_configuration/: in
1EAD_clusters_configuration/autom4te.cache/: requests  traces.0
1EAD_clusters_configuration/src/: syspara.h  vars_para.c
25EAD_clusters_configuration/autom4te.cache/: output.1  requests
25EAD_clusters_configuration/check/: in
25EAD_clusters_configuration/src/: kurata05.c  vars_para.c
2EAD_cluster_configuration/: Makefile.am  Makefile.in  README  configure  configure.ac
2EAD_cluster_configuration/autom4te.cache/: output.0  requests  traces.0  traces.1
2EAD_cluster_configuration/base_sh/act_time_map/: tmp.awk
2EAD_cluster_configuration/check/: in  noEAD_init
2EAD_cluster_configuration/src/: kurata05.c  syspara.h  system.c  vars_para.c
36EAD_clusters_configuration/: configure
36EAD_clusters_configuration/check/: EAD1_init  in
36EAD_clusters_configuration/src/: vars_para.c
4EAD_clusters_configuration/autom4te.cache/: requests
4EAD_clusters_configuration/check/: EAD1_init  in  noEAD_init
9EAD_clusters_configuration/: AUTHORS  Makefile  Makefile.am  Makefile.in  config.h  config.status  configure.ac
9EAD_clusters_configuration/autom4te.cache/: traces.1
9EAD_clusters_configuration/check/: in
9EAD_clusters_configuration/src/: vars_para.c
Ito_inhibition_protocols/: Makefile.am  Makefile.in  README  configure  configure.ac
Ito_inhibition_protocols/src/: cluster16_setting.c  cluster25_setting.c  cluster2_setting.c  cluster4_setting.c  cluster9_setting.c  exptab.c  kurata05.c  mem.c  syspara.h  system.c  vars_para.c
(+2 files in other folders)
